<resources>
    <string name="app_name">Story App</string>
    <string name="story_app">Story App</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="detail">Detail</string>
    <string name="upload_story">Upload story</string>
    <string name="upload">Upload</string>
    <string name="upload_file_error">Error when upload file</string>
    <string name="upload_file_successful">File uploaded successfully</string>
    <string name="login_fill">Login</string>
    <string name="form_unfilled">Fill the form</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="username">Username</string>
    <string name="warning_login_email">Email must be correct</string>
    <string name="warning_login_password">Password must more than 6 characters</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="user_registration">User Registration</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="successful_registered">Account registered successfully</string>
    <string name="failed_registered">Registration failed</string>
    <string name="successful_login">Login account</string>
    <string name="failed_login">Login account failed</string>
    <string name="image_photo_login">Image photo login</string>
    <string name="image_photo_register">Image photo register</string>
    <string name="add_story_button">Add Story Button</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="description">Description</string>
    <string name="image_story">Image Story</string>
    <string name="no_data_story">There\'s no story</string>
    <string name="error_data_story">Error when getting story</string>
    <string name="image_detail_story">Image Detail Story</string>
    <string name="preview_photo_add_story">Preview photo add story</string>
    <string name="what_s_your_story_today">What\'s your story today?</string>
    <string name="permission_denied">Permission denied</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="add_desc_and_take_photo">Add description and take a photo</string>
    <string name="capture_camera">Capture camera</string>
    <string name="switch_camera">Switch camera</string>
    <string name="stories">Stories</string>
    <string name="maps">Maps</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_connection_lost">Your connection lost :\\</string>
    <string name="try_again">Try again</string>
    <string name="language_setting">Language setting</string>
    <string name="user_avatar">User Avatar</string>
    <string name="detail_activity">Detail</string>
    <string name="toolbar">toolbar</string>
    <string name="back_button">back button</string>
    <string name="data_not_found">Data not found :\\</string>
</resources>