<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStoryActivity">

    <ImageView
        android:id="@+id/iv_add_story_preview"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/preview_photo_add_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_add_story_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/camera"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/bt_add_story_gallery"
        app:layout_constraintStart_toStartOf="@+id/iv_add_story_preview"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_story_preview" />

    <Button
        android:id="@+id/bt_add_story_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/gallery"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/bt_add_story_camera"
        app:layout_constraintEnd_toEndOf="@+id/iv_add_story_preview"
        app:layout_constraintStart_toEndOf="@id/bt_add_story_camera"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_story_preview" />

    <EditText
        android:id="@+id/et_add_story_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="start"
        android:hint="@string/what_s_your_story_today"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="14dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_add_story_upload"
        app:layout_constraintEnd_toEndOf="@+id/bt_add_story_gallery"
        app:layout_constraintStart_toStartOf="@+id/bt_add_story_camera"
        app:layout_constraintTop_toBottomOf="@+id/bt_add_story_camera" />

    <Button
        android:id="@+id/bt_add_story_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_button"
        android:text="@string/upload"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_add_story_description"
        app:layout_constraintStart_toStartOf="@+id/et_add_story_description" />
    
</androidx.constraintlayout.widget.ConstraintLayout>