<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.UploadStoryActivity">

    <ImageView
        android:id="@+id/ivToolbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_blue"
        android:contentDescription="@string/toolbar" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivToolbar"
        app:srcCompat="@drawable/ic_back"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/upload_story"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toTopOf="@+id/ivBack" />

    <ImageView
        android:id="@+id/iv_upload_story_preview"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/preview_photo_add_story"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivToolbar" />

    <Button
        android:id="@+id/bt_upload_story_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/camera"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/bt_upload_story_gallery"
        app:layout_constraintStart_toStartOf="@+id/iv_upload_story_preview"
        app:layout_constraintTop_toBottomOf="@+id/iv_upload_story_preview" />

    <Button
        android:id="@+id/bt_upload_story_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/gallery"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/bt_upload_story_camera"
        app:layout_constraintEnd_toEndOf="@+id/iv_upload_story_preview"
        app:layout_constraintStart_toEndOf="@id/bt_upload_story_camera"
        app:layout_constraintTop_toBottomOf="@+id/iv_upload_story_preview" />

    <EditText
        android:id="@+id/et_upload_story_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="start"
        android:hint="@string/what_s_your_story_today"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="14dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_upload_story_upload"
        app:layout_constraintEnd_toEndOf="@+id/bt_upload_story_gallery"
        app:layout_constraintStart_toStartOf="@+id/bt_upload_story_camera"
        app:layout_constraintTop_toBottomOf="@+id/bt_upload_story_camera" />

    <TextView
        android:id="@+id/tv_share_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="Share Location"
        app:layout_constraintBottom_toTopOf="@+id/bt_upload_story_upload"
        app:layout_constraintStart_toStartOf="@id/et_upload_story_description" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_share_location"
        app:layout_constraintEnd_toEndOf="@+id/et_upload_story_description"
        app:layout_constraintTop_toTopOf="@+id/tv_share_location" />

    <com.zuyatna.storyapp.customview.UploadStoryButton
        android:id="@+id/bt_upload_story_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:enabled="false"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_upload_story_description"
        app:layout_constraintStart_toStartOf="@+id/et_upload_story_description" />

    <ProgressBar
        android:id="@+id/pb_upload_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_upload_story_description" />

</androidx.constraintlayout.widget.ConstraintLayout>