<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.RegisterActivity">

    <ImageView
        android:id="@+id/iv_register"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image_photo_register"
        android:src="@drawable/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/user_registration"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_register" />

    <EditText
        android:id="@+id/et_register_username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_edit_text"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_title"
        android:autofillHints="name" />

    <com.zuyatna.storyapp.customview.EditTextEmail
        android:id="@+id/et_register_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_edit_text"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_username" />

    <com.zuyatna.storyapp.customview.EditTextPassword
        android:id="@+id/et_register_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_email" />

    <com.zuyatna.storyapp.customview.RegisterButton
        android:id="@+id/bt_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="70dp"
        android:textAllCaps="false"
        android:enabled="false"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="2dp"
        android:text="@string/already_have_an_account"
        android:gravity="end"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_register_login_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_register"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/tv_register_login_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="2dp"
        android:text="@string/login_fill"
        android:textColor="@color/purple_200"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_have_account"
        app:layout_constraintTop_toBottomOf="@+id/bt_register"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintVertical_bias="0.8" />

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_password"
        app:layout_constraintVertical_bias="0.63"/>

</androidx.constraintlayout.widget.ConstraintLayout>